--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css' rel='stylesheet' />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
     <script src="https://unpkg.com/scrollama"></script>
     <style>
         body {
             margin:0;
             padding:0;
-            font-family: sans-serif;
+            font-family: 'IBM Plex Serif', serif;
         }
         a, a:hover, a:visited {
             color: #0071bc;
@@ -53,6 +56,14 @@
         #features {
             padding-top: 10vh;
             padding-bottom: 10vh;
+        }
+        #features h3 {
+            font-size:1.4em;
+            margin-bottom: 0.5em;
+            font-weight: bold;
+        }
+        #features p {
+            line-height: 1.75;
         }
         .hidden {
             visibility: hidden;
