--- a/index.html
+++ b/index.html
@@ -86,7 +86,21 @@
         }
         .light {
             color: #444;
-            background-color: #fafafa;
+            background-color: #F3EFE5;
+            border-radius: 8px;
+        }
+        .light h3 {
+            color: #B23B32;
+        }
+        .light a {
+            color: #B23B32;
+            display: block;
+            padding: 4px;
+            align: center;
+        }
+        .light a:hover {
+            color: #F3EFE5;
+            background: #B23B32;
         }
         .dark {
             color: #fafafa;
@@ -102,7 +116,7 @@
         }
 
         .step div {
-            padding:  25px 50px;
+            padding:  15px 30px;
             line-height: 25px;
             font-size: 13px;
         }
