Center aligns footer link

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             color: #B23B32;
             display: block;
             padding: 4px;
-            align: center;
+            text-align: center;
         }
         .light a:hover {
             color: #F3EFE5;
